trunk/Archive2/61/6858bba2bfdeb6/output
main.cpp: In function 'int main()':
main.cpp:37:10: error: use of deleted function 'bool B::operator<(const T&, const B::my_ref<U>&) [with T = A::vector<int>; U = A::vector<int>]'
     v1 < r2; // I don't want this to compile
          ^
main.cpp:28:42: note: declared here
     template<typename T,typename U> bool operator<(const T&,const my_ref<U>&) = delete;
                                          ^
